# plansearch-backend

./: .gitignore  pyproject.toml
apps/plansearch/http/: boot.py  main.py  settings.py
apps/plansearch/http/routes/: routes.py
apps/plansearch/http/views/health/: get.py
apps/shared/http/: exceptions.py  logger.py  middlewares.py  response.py  utils.py
etc/local/: .env  .env.tests  Dockerfile  docker-compose.yml
src/shared/domain/: aggregate.py  exceptions.py  null.py  utils.py  value_object.py
src/shared/domain/bus/: dto.py
src/shared/domain/bus/command/: command.py  command_bus.py  command_handler.py
src/shared/domain/bus/event/: domain_event.py  domain_subscriber.py  event_bus.py
src/shared/domain/bus/query/: criterial_query.py  query.py  query_bus.py  query_handler.py  response.py
src/shared/domain/criteria/: criteria.py  field.py  filter.py  filters.py  order.py  order_by.py  order_type.py  value.py
src/shared/domain/value_objects/: id.py
src/shared/infrastructure/bus/: exceptions.py
src/shared/infrastructure/bus/command/: command_bus.py
src/shared/infrastructure/bus/query/: query_bus.py
src/shared/infrastructure/persistence/mongo/: criteria_converter.py  repository.py  schema_converter.py
