[tool.poetry]
name = "plansearch-backed"
version = "0.1.0"
description = ""
authors = ["Nelson González Machin <nelsongonmac@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.20.4"
environs = "^9.5.0"
pymongo = {extras = ["srv"], version = "^4.2.0"}
motor = {extras = ["srv"], version = "^3.0.0"}
uvicorn = "^0.18.2"
aioboto3 = "^9.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
